# hackathon-phase-3-4-5

./: .gitignore  README.md  pyproject.toml
.claude/agents/: auth-security-expert.md  fastapi-backend-agent.md  neon-db-manager.md  nextjs-ui-agent.md
.specify/memory/: constitution.md  constitution.md.new
backend/: database_migrations.py  init_db.py  integration_test.py  requirements.txt  test_advanced_features.py  test_chat_updates.py  test_openrouter.py
backend/src/: main.py
frontend/: next.config.js  package-lock.json  package-lock.json.backup  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo
history/prompts/: 001-todo-ui-alignment-fix.todo-ui-alignment-fix.prompt.md
specs/001-ai-todo-chatbot/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md  tmpclaude-67d6-cwd
specs/001-cli-visual-enhancement/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-frontend-ui-upgrade/: data-model.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-nextjs-upgrade/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-phase-i-advanced/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-phase-i-basic-todo/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-phase-i-intermediate/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-phase-ii-intermediate/: data-model.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-phase-ii-todo/: data-model.md  (+5 more)
src/: main.py
(+209 files in other folders)
